@@ -30,16 +30,37 @@
 extern "C" {
 #endif
 
-#if defined(__STDC__) && (__STDC_VERSION__ >= 199901L)
-# define TRIO_C99
+#ifndef TRIO_C99
+# if defined(__STDC__) && (__STDC_VERSION__ >= 199901L)
+#  define TRIO_C99 1
+# else
+#  define TRIO_C99 0
+# endif
 #endif
-#define TRIO_BSD
-#define TRIO_GNU
-#define TRIO_MISC
-#define TRIO_UNIX98
-#define TRIO_MICROSOFT
-#define TRIO_EXTENSION
-#define TRIO_ERRORS
+#ifndef TRIO_BSD
+# define TRIO_BSD 1
+#endif
+#ifndef TRIO_GNU
+# define TRIO_GNU 1
+#endif
+#ifndef TRIO_MISC
+# define TRIO_MISC 1
+#endif
+#ifndef TRIO_UNIX98
+# define TRIO_UNIX98 1
+#endif
+#ifndef TRIO_MICROSOFT
+# define TRIO_MICROSOFT 1
+#endif
+#ifndef TRIO_EXTENSION
+# define TRIO_EXTENSION 1
+#endif
+#ifndef TRIO_WIDECHAR
+# define TRIO_WIDECHAR 1
+#endif
+#ifndef TRIO_ERRORS
+# define TRIO_ERRORS 1
+#endif
 
 
 typedef int (*trio_callback_t)(void *ref);
@@ -81,7 +102,7 @@ int  trio_get_quote(void *ref); /* ' */
 void trio_set_quote(void *ref, int is_quote);
 int  trio_get_upper(void *ref);
 void trio_set_upper(void *ref, int is_upper);
-#if defined(TRIO_C99)
+#if TRIO_C99
 int  trio_get_largest(void *ref); /* j */
 void trio_set_largest(void *ref, int is_largest);
 int  trio_get_ptrdiff(void *ref); /* t */
