@@ -4,8 +4,13 @@ CHANGES -- trio
 The changes listed without a name attributed to them were most likely done by
 Bjorn Reese and/or Daniel Stenberg.
 
-Version 1.x - 2001/05/19
+Version 1.x - 2001/05/20
 ------------------------
+* Added wide character arguments for %ls, %ws, and %S.
+
+* Added the possibility to specify standard support (TRIO_C99 etc.) as compiler
+  options.
+
 * Fixed default precision for %f (reported by Jose Ortiz)
 
 * Howard Kapustein
